--- a/public/css/style.css
+++ b/public/css/style.css
@@ -73,12 +73,12 @@ header
 }
 .postHome
 {
-  border: 1px solid #222222;
+  border: 1px solid #c4c5ca;
   width: 500px;
   border-radius: 5px;
   text-align: center;
 }
-.btn
+#buttonHome
 {
   background-color: #222222;
   color: white;
@@ -112,4 +112,42 @@ footer
 {
   text-decoration: none;
   color: white;
+}
+#container
+{
+  width: 960px;
+  margin: auto;
+  display: flex;
+  justify-content: space-around;
+}
+.chapters
+{
+  width: 480px;
+  margin: auto;
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+  text-align: center;
+  border-bottom: 1px solid #c4c5ca;
+}
+#widget
+{
+  width: 350px;
+}
+#search
+{
+  display: flex;
+  padding: 25px;
+  margin: auto;
+  border: 1px solid #c4c5ca;
+  align-items: center;
+  margin-bottom: 20px;
+}
+#buttonSearch
+{
+  border-radius: 5px;
+}
+#about
+{
+  border: 1px solid #c4c5ca;
+  padding-left: 25px;
 }
