--- a/public/css/style.css
+++ b/public/css/style.css
@@ -188,3 +188,13 @@ footer
   color: white;
   font-size: 1.5em;
 }
+#contact_container
+{
+  width: 500px;
+  margin: auto;
+  margin-top: 50px;
+}
+#success
+{
+  margin-top:20px;
+}
