--- a/public/css/style.css
+++ b/public/css/style.css
@@ -198,3 +198,39 @@ footer
 {
   margin-top:20px;
 }
+#chapter_container
+{
+  width: 960px;
+  margin: auto;
+  text-align: justify;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  border: 3px solid #c4c5ca;
+  border-top: 5px solid #222222;
+  box-shadow: 0px 2px 2px #c4c5ca;
+}
+#chapter_container h2
+{
+  padding-left: 25px;
+  padding-right: 25px;
+  text-align: center;
+}
+#p_italic
+{
+  text-align: center;
+  margin-bottom: 25px;
+}
+#chapter_container p
+{
+  padding-left: 25px;
+  padding-right: 25px;
+  margin-bottom: 25px;
+}
+#comment_container
+{
+  border: 3px solid #c4c5ca;
+  border-top: 5px solid #222222;
+  width: 960px;
+  margin: auto;
+  padding: 25px;
+}
