--- a/public/css/style.css
+++ b/public/css/style.css
@@ -228,9 +228,15 @@ footer
 }
 #comment_container
 {
-  border: 3px solid #c4c5ca;
   border-top: 5px solid #222222;
   width: 960px;
   margin: auto;
   padding: 25px;
+}
+.comments
+{
+  border: 1px solid #c4c5ca;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding: 20px;
 }
