--- a/public/css/style.css
+++ b/public/css/style.css
@@ -37,6 +37,10 @@ header
   margin-left: 10px;
   font-size: 1.2em;
 }
+#nav-hamburger
+{
+  display: none;
+}
 #avatar-Forteroche
 {
   background: url('../images/profil1.jpg') no-repeat top;
@@ -67,22 +71,24 @@ header
 #lastPosts
 {
   margin: auto;
-  width: 1800px;
+  max-width: 1800px;
   display: flex;
   justify-content: space-around;
 }
 .postHome
 {
   border: 1px solid #c4c5ca;
-  width: 500px;
   border-radius: 5px;
   text-align: center;
+  max-width: 475px;
 }
+
 .buttonNext
 {
   background-color: #222222;
   color: white;
   margin-top: 10px;
+  margin-bottom: 20px;
   width: 200px;
   height: 40px;
 }
@@ -277,4 +283,50 @@ footer
   width: 960px;
   margin: auto;
   min-height: 200px;
+}
+@media screen and (max-width: 1200px) {
+  .postHome
+  {
+    max-width: 350px;
+  }
+}
+@media screen and (max-width: 992px) {
+  #lastPosts
+  {
+    flex-direction: column;
+    align-items: center;
+  }
+  .postHome
+  {
+    margin-bottom: 50px;
+    max-width: 475px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .nav
+  {
+    display: flex;
+  }
+}
+@media screen and (max-width: 576px) {
+  .navbar
+  {
+    position: relative;
+  }
+  #nav-hamburger
+  {
+    display: inline-block;
+    display: flex;
+    align-items: center;
+    list-style-type: none;
+    position: absolute;
+    right: 0;
+    margin-right: 5px;
+    padding: 10px;
+    cursor: pointer;
+  }
+  .nav
+  {
+    display: none;
+  }
 }
