--- a/public/css/style.css
+++ b/public/css/style.css
@@ -107,6 +107,7 @@ footer
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
+  text-align: center;
 }
 .social-media
 {
@@ -121,7 +122,7 @@ footer
 }
 #container
 {
-  width: 960px;
+  max-width: 960px;
   margin: auto;
   display: flex;
   justify-content: space-around;
@@ -129,7 +130,7 @@ footer
 }
 .chapters
 {
-  width: 480px;
+  max-width: 480px;
   margin: auto;
   margin-bottom: 50px;
   padding-bottom: 20px;
@@ -143,7 +144,7 @@ footer
 }
 #widget
 {
-  width: 350px;
+  max-width: 350px;
 }
 #search
 {
@@ -196,9 +197,11 @@ footer
 }
 #contact_container
 {
-  width: 500px;
+  max-width: 500px;
   margin: auto;
   margin-top: 50px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 #success
 {
@@ -206,14 +209,15 @@ footer
 }
 #chapter_container
 {
-  width: 960px;
   margin: auto;
+  max-width: 960px;
   text-align: justify;
   margin-top: 50px;
   margin-bottom: 50px;
   border: 3px solid #c4c5ca;
   border-top: 5px solid #222222;
   box-shadow: 0px 2px 2px #c4c5ca;
+
 }
 #chapter_container h2
 {
@@ -235,7 +239,7 @@ footer
 #comment_container
 {
   border-top: 5px solid #222222;
-  width: 960px;
+  max-width: 960px;
   margin: auto;
   padding: 25px;
 }
@@ -245,6 +249,11 @@ footer
   margin-top: 20px;
   margin-bottom: 20px;
   padding: 20px;
+  word-wrap: break-word;
+}
+.date-comment
+{
+  float:right;
 }
 #admin_container
 {
@@ -295,17 +304,36 @@ footer
   {
     flex-direction: column;
     align-items: center;
+    padding-left: 10px;
+    padding-right: 10px;
   }
   .postHome
   {
     margin-bottom: 50px;
     max-width: 475px;
   }
+
 }
 @media screen and (max-width: 768px) {
   .nav
   {
     display: flex;
+  }
+  #container
+  {
+    display: flex;
+    flex-direction: column;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  #widget
+  {
+    display: none;
+  }
+  #chapter_container
+  {
+    margin-left: 10px;
+    margin-right: 10px;
   }
 }
 @media screen and (max-width: 576px) {
@@ -328,5 +356,9 @@ footer
   .nav
   {
     display: none;
+  }
+  .date-comment
+  {
+    float: none;
   }
 }
