--- a/public/css/style.css
+++ b/public/css/style.css
@@ -264,24 +264,27 @@ footer
 {
   display: flex;
   justify-content: space-around;
+  margin: auto;
+  max-width: 1600px;
 }
 .chapter_admin
 {
   border: 1px solid #c4c5ca;
-  width: 30%;
+  width: 500px;
   margin-top: 50px;
   padding: 10px;
   border-radius: 5px;
 }
 #createChapter, #editChapter
 {
-  width: 960px;
+  max-width: 960px;
   margin: auto;
+  padding: 5px;
 }
 .comment_admin
 {
   border: 1px solid #c4c5ca;
-  width: 30%;
+  max-width: 500px;
   padding: 10px;
   border-radius: 5px;
   margin: auto;
@@ -289,9 +292,16 @@ footer
 }
 #commentAdmin
 {
-  width: 960px;
+  max-width: 960px;
   margin: auto;
   min-height: 200px;
+  padding: 5px;
+}
+.btn-comments
+{
+  margin-top: 10px;
+  display: flex;
+  flex-direction: row-reverse;
 }
 @media screen and (max-width: 1200px) {
   .postHome
@@ -334,6 +344,20 @@ footer
   {
     margin-left: 10px;
     margin-right: 10px;
+  }
+  #admin_container
+  {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  #chapter_admin_container
+  {
+    flex-direction: column;
+    align-items: center;
+  }
+  .chapter_admin
+  {
+    max-width: 100%;
   }
 }
 @media screen and (max-width: 576px) {
